gap problem fix

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,8 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* padding-top: 1rem;
+  padding-bottom: 1rem; */
 }
 
 .live-btn {
@@ -61,6 +63,7 @@ h3 {
   padding: 12px 16px;
   border-radius: 5px;
   margin-top: 0.5em;
+ 
   transition: background 0.5s ease-in 0.2ms;
 }
 .live-btn:hover {
@@ -74,8 +77,9 @@ h3 {
 .banner-content h1 {
   font-weight: 700;
   font-size: 4.25rem;
-  line-height: 80px;
+  line-height: 70px;
   color: #ffffff;
+ 
 }
 .banner-content p {
   margin: 1.25em 0px;
